--- a/style.css
+++ b/style.css
@@ -65,7 +65,6 @@ img {vertical-align: middle;}
 #bodyId{
 background-color:rgb(235, 235, 235);
 }
-
 #firstP{
   margin-left:400px;
   margin-bottom:90px;
@@ -73,7 +72,6 @@ background-color:rgb(235, 235, 235);
   padding-left:10px;
   font-size:18px;
 }
-
 #ul{
   background-color:rgb(219, 235, 255);
 }
@@ -81,6 +79,9 @@ a:hover, a:active{
   background-color: rgb(109, 181, 186);
 }
 
+.images{
+
+}
 .firstP{
   overflow:auto;
 }
