--- a/style.css
+++ b/style.css
@@ -4,8 +4,8 @@ body {font-family: Verdana, sans-serif;}
 img {vertical-align: middle;}
 
 .slideshow-container {
-  max-width: 10000px;
-  position: absolute ;
+  max-width: 1000px;
+  position: relative;
   margin: auto;
 }
 .dot {
@@ -18,28 +18,30 @@ img {vertical-align: middle;}
   transition: background-color 0.6s ease;
 }
 
-.active, .dot:hover {
+.active {
   background-color: #717171;
 }
 
 .fade {
   -webkit-animation-name: fade;
-  -webkit-animation-duration: 2s;
+  -webkit-animation-duration: 1.5s;
   animation-name: fade;
-  animation-duration: 2s;
+  animation-duration: 1.5s;
 }
 
 @-webkit-keyframes fade {
-  from {opacity: .6} 
+  from {opacity: .4} 
   to {opacity: 1}
 }
 
 @keyframes fade {
-  from {opacity: .6} 
+  from {opacity: .4} 
   to {opacity: 1}
 }
 
-
+@media only screen and (max-width: 300px) {
+  .text {font-size: 11px}
+}
 
 
 
